removing rswag test from default rspec tests

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,7 @@ AllCops:
     - bin/rake
     - bin/bundle
     - bin/rails_helper
+    - config/**/*
     - test/test_helper.rb
     - spec/**/*
 # Commonly used screens these days easily fit more than 80 characters.
