--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,10 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: localhost
+  host: postgres
   user: postgres
-  password: xtz7qr87
-  port: 5434
-
+# password: your_db_password
+# port: 5432
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
